<resources>
    <string name="app_name">Son M.O.I</string>
    <string name="price">Price</string>
    <string name="nhan">Nhan</string>
    <string name="sl">Số lượng</string>
    <string name="gmail">Gmail</string>
    <string name="pass">Mật khẩu</string>
    <string name="repass">Nhập lại mật khẩu</string>
    <string name="login">Đăng kí</string>
    <string name="logindn">ĐĂNG NHẬP</string>
    <string name="loginrepass">QUÊN MẬT KHẨU</string>
    <string name="category">Sản phẩm mới nhất</string>
    <string name="phone">Số điện thoại</string>
    <string name="total_price">Tổng tiền</string>
    <string name="district">Quận / huyện</string>
    <string name="cityy">Tỉnh / thành</string>
    <string name="address">Địa chỉ</string>
    <string name="firstlastname">Họ và tên</string>
    <string name="delivery">Thông tin giao hàng</string>
    <string name="amount">Số lượng</string>
    <string name="payproduct">THANH TOÁN</string>
    <string name="codepass">Lấy mã</string>
    <string name="detailorder">Detail</string>
    <string name="soluong">Số lượng</string>
    <string name="next">Tiếp tục mua</string>
    <string name="pay">Thanh toán</string>
    <string name="cart">GIỎ HÀNG</string>
    <string name="nullcart">Giỏ hàng của bạn trống</string>
    <string name="resuiltpay">Tiếp tục với phương thức thanh toán</string>
    <string name="addcart">Thêm vào giỏ hàng</string>
    <string name="data_detail">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="datedetail">22/09/2022</string>
    <string name="nameproduct">TNhan</string>
    <string name="product">SẢN PHẨM</string>
    <string name="title_cart">ĐƠN HÀNG</string>
    <string name="date">Ngày</string>
    <string name="search">Search</string>
    <string name="search_input">Search...</string>
    <string name="title_sign">ĐĂNG KÍ NGƯỜI DÙNG</string>
    <string name="menu_info">Thông tin tài khoản</string>
    <string name="menu_signup">Đăng xuất</string>
    <string name="menu_repass">Đổi mật khẩu</string>
    <string name="comment">Comment</string>
    <string name="other">Khác</string>
    <string name="product_manager">Sản phẩm</string>
    <string name="user_manager">Tài khoản</string>
    <string name="cate_manager">Danh mục</string>
    <string name="notify_manager">Thông báo</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="admin_manager">Hi Admin</string>
    <string name="view">View SP</string>
    <string name="website">Website</string>
    <string name="nameuser">NameUser</string>
    <string name="category_main">Danh mục sản phẩm</string>
    <string name="tapchism">Tạp chí son môi</string>
    <string name="text_magazine">Dưỡng trắng da với công nghệ 3 tầng tác động của Lanci</string>
    <string name="all"><![CDATA[Xem tất cả >]]></string>
    <string name="SellName">Son M.O.I</string>
    <string name="nameUser">DoTNhan</string>
    <string name="txtMagazine">Nga cảnh báo nguy cơ Thế chiến sau tuyên bố của Ukraine</string>
    <string name="description_magazine">Trước đó, trong hội nghị hôm 6/10 do Viện Lowy tổ chức, giám đốc điều hành viện nghiên cứu chính sách hàng đầu của Australia Michael Fullilove hỏi Tổng thống Zelensky rằng, liệu ông có tin Nga sẽ dùng vũ khí hạt nhân để chống của Australia Michael Fullilove hỏi Tổng thống Zelensky rằng, liệu ông có tin Nga sẽ dùng vũ khí hạt nhân để chống Ukraine và liệu Kiev muốn NATO làm gì hơn nữa để ngăn chặn Moscow.</string>
    <string name="comment_product">(0 nhận xét)</string>
    <string name="puy">ĐÃ BÁN 125800</string>
    <string name="htv">Hạng thành viên</string>
    <string name="tlht">Tích lũy hiện tại</string>
    <string name="dhct">Đơn hàng của tôi</string>
    <string name="dcct">Địa chỉ của tôi</string>
    <string name="vouchers">Vouchers của tôi</string>
    <string name="nxct">Nhận xét của tôi</string>
    <string name="logout">Đăng xuất</string>
    <string name="qlwebsite">Quản lí website</string>
    <string name="add_product">Thêm sản phẩm</string>
    <string name="delete_product">Xóa sp</string>
    <string name="update">Update</string>
    <string name="txt_Admin_des">Chúng ta vẫn biết rằng, làm việc với một đoạn văn bản dễ đọc và rõ nghĩa dễ gây rối trí và cản trở việc tập trung vào yếu tố trình bày văn bản.</string>
    <string name="categories">Categories</string>
    <string name="delete">Delete</string>
    <string name="order">Đơn hàng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qc">Quảng cáo</string>
    <string name="iames">Hình ảnh</string>
    <string name="select">Chọn</string>
    <string name="discount">Giảm giá:</string>
    <string name="status">Tình trạng đơn hàng</string>
    <string name="profile">Giỏ hàng</string>
    <string name="home">Trang chủ</string>
    <string name="orderhome">Đơn hàng</string>
    <string name="account">Tài khoản</string>
    <string name="cart_item">Giỏ hàng</string>
    <string name="messages">Messages</string>
    <string name="iduser">idUser</string>
    <string name="nhaptinnhan">Nhập tin nhắn ?</string>

</resources>