<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.screenUser.AccountActivity">

    <ImageView
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:layout_height="200dp"
        android:src="@drawable/img_5">
    </ImageView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:background="@drawable/product_background"
                android:orientation="vertical"
                android:layout_marginTop="125dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:background="@drawable/border_acount"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/icon_user"
                        android:layout_width="100dp"
                        android:layout_margin="10dp"
                        android:layout_height="100dp">
                    </ImageView>
                    <LinearLayout
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="14dp"
                        android:layout_marginEnd="8dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txtAccount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/user_manager"
                            android:justificationMode="inter_word"
                            android:textColor="@color/black"
                            android:textSize="16sp"></TextView>

                        <TextView
                            android:id="@+id/txtPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:justificationMode="inter_word"
                            android:text="@string/phone"
                            android:textSize="16sp"></TextView>
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_weight="5"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txtTichluy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/tlht"
                            android:textColor="@color/black"
                            android:textSize="16sp"></TextView>
                        <TextView
                            android:layout_marginTop="30dp"
                            android:text="@string/htv"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        </TextView>
                    </LinearLayout>
                    <ImageView
                        android:src="@drawable/code_qr"
                        android:layout_margin="10dp"
                        android:layout_width="130dp"
                        android:layout_height="130dp">

                    </ImageView>

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:background="@drawable/product_background"
                android:orientation="vertical"
                android:layout_marginTop="14dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/dhct"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/txtAddress"
                    android:text="@string/dcct"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:text="@string/nxct"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:text="@string/vouchers"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/qlwebsiteAdmin"
                    android:text="@string/qlwebsite"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:padding="10dp"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>

            </LinearLayout>
            <Button
                android:id="@+id/buttonLogout"
                android:text="@string/logout"
                android:background="@drawable/botron_button"
                android:layout_gravity="center|bottom"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:layout_width="350dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content">
            </Button>
        </LinearLayout>
    </ScrollView>



</FrameLayout>