<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/product_background"
    android:layout_margin="5dp"
    android:elevation="3dp"
    android:padding="5dp"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/imageViewDetailOrder"
        android:src="@drawable/logo2"
        android:layout_width="120dp"
        android:layout_height="120dp">
    </ImageView>

    <TextView
        android:id="@+id/txtNameDetailOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imageViewDetailOrder"
        android:text="@string/nameproduct"
        android:layout_marginStart="5dp"
        android:textColor="#070707"
        android:textSize="18sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/txtNameDetailPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNameDetailOrder"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/imageViewDetailOrder"
        android:text="@string/price"
        android:textColor="#070707"
        android:textSize="18sp"
        android:textStyle="bold">
    </TextView>
    <TextView
        android:id="@+id/txtNameDetailSoLuong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNameDetailPrice"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/imageViewDetailOrder"
        android:text="@string/sl"
        android:textColor="#070707"
        android:textSize="18sp"
        android:textStyle="bold">
    </TextView>

</RelativeLayout>