<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:elevation="3dp"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:background="@drawable/background_product"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imagesProductAdmin"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_margin="8dp"
            tools:srcCompat="@tools:sample/avatars" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textNameProductAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/product"/>
            <LinearLayout
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textPriceProductOldAdmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:layout_marginEnd="5dp"
                    android:textColor="#AFA2A2"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
                <TextView
                    android:id="@+id/textPriceProductNewAdmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="#f00"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <TextView
                android:id="@+id/date_product"
                android:text="@string/date"
                android:textColor="#000"
                android:layout_marginTop="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"

                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/descripton_product"
                android:text="@string/txt_Admin_des"
                android:textColor="#000"
                android:layout_marginTop="4dp"
                android:justificationMode="inter_word"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="10sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                tools:targetApi="o"
                tools:ignore="SmallSp">
            </TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:gravity="center|start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/star"
            android:layout_marginStart="10dp"
            android:layout_width="10dp"
            android:layout_height="10dp">
        </ImageView>
        <ImageView
            android:src="@drawable/star"
            android:layout_marginStart="2dp"
            android:layout_width="10dp"
            android:layout_height="10dp">
        </ImageView>
        <ImageView
            android:src="@drawable/star"
            android:layout_marginStart="2dp"
            android:layout_width="10dp"
            android:layout_height="10dp">
        </ImageView>
        <ImageView
            android:src="@drawable/star"
            android:layout_marginStart="2dp"
            android:layout_width="10dp"
            android:layout_height="10dp">
        </ImageView>
        <ImageView
            android:src="@drawable/star"
            android:layout_marginStart="2dp"
            android:layout_width="10dp"
            android:layout_height="10dp">
        </ImageView>
        <TextView
            android:textSize="10sp"
            android:text="@string/comment_product"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="SmallSp">
        </TextView>
    </LinearLayout>
    <TextView
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="1dp"
        android:textColor="#fff"
        android:background="@drawable/background_buy_product"
        android:textSize="10sp"
        android:text="@string/puy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="SmallSp">

    </TextView>
</LinearLayout>