<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:elevation="3dp"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:background="@drawable/background_product"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imagesCategoryAdmin"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_margin="8dp"
            tools:srcCompat="@tools:sample/avatars" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textNameCategoryAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/product"/>

            <TextView
                android:id="@+id/date_category"
                android:text="@string/date"
                android:textColor="#000"
                android:layout_marginTop="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"

                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/descripton_category"
                android:text="@string/txt_Admin_des"
                android:textColor="#000"
                android:layout_marginTop="4dp"
                android:justificationMode="inter_word"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="10sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                tools:targetApi="o"
                tools:ignore="SmallSp">
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>