<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activity.screenUser.ForgotPasswordActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/addProductInCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/loginrepass"
            android:gravity="center"
            android:textColor="#4E4E4E"
            android:textSize="24sp"
            android:textStyle="normal|bold"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="63dp"
            android:layout_marginTop="150dp"
            android:gravity="center_horizontal"
            android:hint="@string/gmail"
            android:textColorHint="#A7A7A7"
            android:layout_gravity="center"
            app:boxStrokeColor="#EAEAEE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputGmailResetpass"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textColor="#5B5B5B"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <ProgressBar
            android:id="@+id/progressBarForgotpass"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_height="wrap_content">
        </ProgressBar>

        <Button
            android:id="@+id/buttonResetpass"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/botron_button"
            android:backgroundTint="#FF5722"
            android:text="@string/codepass"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>


</LinearLayout>